new change accept

--- a/src/styles/ContactPage.css
+++ b/src/styles/ContactPage.css
@@ -5,6 +5,7 @@
 }
 
 .contact-heading {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 2.5rem;
   text-align: center;
   font-weight: bold;
