--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer-section {
-  background:  rgb(87, 86, 86);
+  background: radial-gradient(circle at top, #0f0f0f, #8b8b8b); 
   color: white;
   padding: 40px 0 20px;
   animation: fadeUp 1s ease-in-out;
