--- a/src/styles/AboutPage.css
+++ b/src/styles/AboutPage.css
@@ -1,8 +1,22 @@
-.about-page {
+/* .about-page {
   background: rgb(87, 86, 86);
   background-size: 200% 200%;
   animation: gradientMove 8s ease infinite;
   min-height: 100vh;
+} */
+
+.about-page {
+  /* background: linear-gradient(135deg, #0e0e0e, #f9f8f8); */
+background: radial-gradient(circle at top, #0f0f0f, #424242);
+  background-size: 200% 200%;
+  animation: gradientMove 8s ease infinite;
+  min-height: 100vh;
+}
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 /* Background animation */
@@ -18,6 +32,7 @@
   color:white;
   margin-bottom: 20px;
   animation: fadeInDown 1s ease forwards;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .about-text {
