--- a/src/styles/ConceptCompletion.css
+++ b/src/styles/ConceptCompletion.css
@@ -6,6 +6,7 @@
 }
 
 .section-title {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 40px;
