--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -11,6 +11,7 @@
   font-weight: 700;
   letter-spacing: 2px;
   margin-bottom: 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .sub-heading {
