--- a/src/styles/ServicesPage.css
+++ b/src/styles/ServicesPage.css
@@ -6,6 +6,7 @@
 }
 
 .services-heading {
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 2.5rem;
   text-align: center;
   font-weight: bold;
